# scrahp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  lint.sh  pyproject.toml  scrapy.cfg
api/: api.Dockerfile  app.py  serve.sh
api/templates/: landing_page.html
db/: db.Dockerfile  db_queries.py  db_service.py  init_db.py
scrahp/: articles.py  articles_loaders.py  crawl.sh  items.py  loaders.py  middlewares.py  pipelines.py  scrahp.Dockerfile  settings.py  start.sh
scrahp/pages/: Articles2-www.bbc.com.html
scrahp/spiders/: articles.py  articles_spider.py  urls.py
