[tool.poetry]
name = "scrahp"
version = "0.1.0"
description = ""
authors = ["Hany Akoury <hany.akoury@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
