[tool.poetry]
name = "scrahp"
version = "0.1.0"
description = ""
authors = ["Hany Akoury <hany.akoury@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
unidecode = "^1.3.7"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
