[tool.poetry]
name = "scrahp"
version = "0.1.0"
description = ""
authors = ["Hany Akoury <hany.akoury@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
unidecode = "^1.3.7"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^21.2.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-annotations = "^3.0.1"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
format-on-save = true

[tool.pyright]
# include = ["scrahp/*.py", "db/*.py", "api/*.py"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownVariableType = false

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
ignore = [
    "D399",
    "D400",
    "DAR201",
    "DAR301",
    "W503",
    "U101",
    "E402",
    "E203",
    "ANN101",
    # "ANN102",
    "ANN401",
]
max-line-length = 150
exclude = [".git", "scrahp/__pycache__", ".venv"]
